Fixed genre text alignment

--- a/01_movieapp/css/style.css
+++ b/01_movieapp/css/style.css
@@ -113,6 +113,7 @@ body {
 .flex-row-spaced {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     padding-bottom: 1em;
     width: 90%;
 }
@@ -154,6 +155,10 @@ a {
     font-size: var(--fs-600);
     font-weight: var(--fw-bold);
     max-width: 25ch;
+}
+
+.text-movie-genre {
+    font-size: var(--fs-300);
 }
 
 .text-movie-plot {
